--- a/app_client/package.json
+++ b/app_client/package.json
@@ -24,32 +24,41 @@
   },
   "version": "1.0.1",
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@popperjs/core": "^2.11.8",
+    "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^7.1.2",
     "@themesberg/react-bootstrap": "^1.4.1",
-    "bootstrap": "5.3.3",
-    "chartist": "^0.11.4",
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.1",
+    "react-is":"16.13.1",
+    "bootstrap": "^5.3.3",
+    "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^0.1.4",
+    "moment": "^2.16.0",
     "moment-timezone": "^0.5.31",
-    "sass": "^1.77.8",
     "react": "^18.3.1",
     "react-chartist": "^0.14.4",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-github-btn": "^1.2.0",
-    "react-live": "^2.2.3",
+    "react-live": "^4.1.7",
     "react-router-dom": "^6.26.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.1.0",
     "react-transition-group": "^4.4.1",
-    "simplebar-react": "^2.3.0"
+    "sass": "^1.77.8",
+    "simplebar-react": "^2.3.0",
+    "typescript": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
