--- a/app_client/package.json
+++ b/app_client/package.json
@@ -40,7 +40,7 @@
     "@themesberg/react-bootstrap": "^1.4.1",
     "@babel/plugin-proposal-private-property-in-object":"^7.21.1",
     "react-is":"16.13.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "5.0.0-beta2",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "moment": "^2.16.0",
