--- a/app_client/package.json
+++ b/app_client/package.json
@@ -25,6 +25,7 @@
   "version": "1.0.1",
   "dependencies": {
     "@babel/core": "^7.0.0-0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.1",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -38,8 +39,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^7.1.2",
     "@themesberg/react-bootstrap": "^1.4.1",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.1",
-    "react-is":"16.13.1",
+    "axios": "^1.7.4",
     "bootstrap": "5.0.0-beta2",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^0.1.4",
@@ -51,6 +51,7 @@
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-github-btn": "^1.2.0",
+    "react-is": "16.13.1",
     "react-live": "^4.1.7",
     "react-router-dom": "^6.26.0",
     "react-router-hash-link": "^2.4.3",
