--- a/app_client/package.json
+++ b/app_client/package.json
@@ -40,19 +40,22 @@
     "@testing-library/user-event": "^7.1.2",
     "@themesberg/react-bootstrap": "^1.4.1",
     "axios": "^1.7.4",
-    "bootstrap": "5.0.0-beta2",
+    "bootstrap": "^5.3.3",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "moment": "^2.16.0",
     "moment-timezone": "^0.5.31",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-chartist": "^0.14.4",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-github-btn": "^1.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-is": "16.13.1",
     "react-live": "^4.1.7",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
